--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: A-woman-s-debt_72041
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 72041-h/images/cover.jpg
 creator:
   author:
     agent_name: Le Queux, William
@@ -13,6 +16,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/3141
     wikipedia: https://en.wikipedia.org/wiki/William_Le_Queux
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72041#A-woman-s-debt
 gutenberg_issued: '2023-11-05'
 identifiers:
   gutenberg: '72041'
